test/arrays/deitz/part7/test_illegal_named_alias_argument.good
test_illegal_named_alias_argument.chpl:7: error: alias-named-argument passing can only be used in constructor calls
